# App

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE.txt  contributing.md  readme.md  vcpkg.json
.github/workflows/: codeql.yml  codeql_gh.yml  documentation.yml  precommit.yml
app/: CMakeLists.txt  main.cpp
cmake/: msvc_modules_enabler.cmake
docs/: Doxyfile
src/: CMakeLists.txt  utils.ixx  utils.ttxt
src/partitions/: utils-helloworld.ixx  utils-mynumber.ixx  utils-print.ixx
tests/: CMakeLists.txt
tests/utils/: CMakeLists.txt  tests_utils.cpp
